Simplified the parameters when mounting a model; no more need to specify model_type as it will be infered.
Extended support to fine-tune also LLM's of type text-generation, as well as translation.
